# recipebox_v1

./: manage.py  pyproject.toml
recipebox_v1/: asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
recipebox_v1/migrations/: 0001_initial.py
recipebox_v1/templates/: author.html  authoraddform.html  index.html  loginform.html  recipe.html  recipeaddform.html
