[tool.poetry]
name = "recipebox_v1"
version = "0.1.0"
description = "recipes that will blow your mind"
authors = ["Jonathan Jones <jonathan.jones51@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
autopep8 = "^1.5.2"
flake8 = "^3.7.9"
django-autocomplete-light = "^3.5.1"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.5.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
